# preprocess_cancellation

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  Makefile  bench.py  flake.nix  out.txt  package.nix  prusaslicer.gcode  pyproject.toml  slic3r.gcode  superslicer.gcode  test.py  test_preprocessor.py
GCode/: superslicer.gcode
expected/: ideamaker.gcode  m486.gcode  prusaslicer-issue1.gcode  superslicer.gcode
python/preprocess_cancellation/: __init__.py  __main__.py
rs/outputs/: cura.gcode  prusaslicer.gcode  slic3r.gcode  superslicer.gcode
rs/src/: main.rs
src/: bounding_box.rs  error.rs  generator.rs  lib.rs  main.rs  model.rs  parser.rs  patch.rs  pyiter.rs
src/gcode/: known_object.rs  mod.rs  object_tracker.rs  parser.rs
src/gcode/slicers/: cura.rs  ideamaker.rs  m486.rs  mod.rs  slic3r.rs
src/model/: bounding_box.rs  known_object.rs  mod.rs  object_tracker.rs
src/py/: file_iter.rs  file_like.rs  mod.rs
src/slicers/: cura.rs  ideamaker.rs  mod.rs  slic3r.rs
temp/: Cargo.toml  pyproject.toml
temp/src/: lib.rs
tests/: snapshot.rs
tests/snapshots/: snapshot__cura.gcode.snap  snapshot__cura.snap.new  snapshot__ideamaker.gcode.snap  snapshot__m486.gcode.snap  snapshot__prusaslicer-issue1.gcode.snap  snapshot__prusaslicer.gcode.snap  snapshot__slic3r.gcode.snap  snapshot__snapshot-2.snap  snapshot__snapshot-3.snap  snapshot__snapshot-4.snap  snapshot__snapshot-5.snap  snapshot__snapshot.snap  snapshot__superslicer.gcode.snap  snapshot__superslicer.snap
