[package]
name = "preprocess_cancellation"
version = "0.1.0"
edition = "2021"

[lib]
name = "preprocess_cancellation"
crate-type = ["cdylib", "rlib"] # rlib: https://github.com/rust-lang/cargo/issues/6659

[dependencies]
pyo3 = "0.19.0"
tempfile = "3.9.0"
thiserror = "1.0.30"
winnow = "0.5.34"

[dev-dependencies]
insta = "1.34.0"
