[package]
name = "preprocess_cancellation"
version = "0.2.0"
edition = "2021"

[lib]
name = "preprocess_cancellation"
crate-type = ["cdylib", "rlib"] # rlib required for integration tests: https://github.com/rust-lang/cargo/issues/6659

[dependencies]
clap = { version= "4.4.18", features = ["cargo"] }
pyo3 = "0.21.2"
tempfile = "3.9.0"
thiserror = "1.0.30"
winnow = "0.6.8"

[dev-dependencies]
insta = "1.34.0"
rstest = "0.19.0"

[profile.release]
debug = true
